# rust-reversal-proxy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init-db.sh
src/: config.rs  lib.rs  main.rs  middleware.rs
src/db/: mod.rs  schema.sql
src/handlers/: mod.rs  regular.rs  ws.rs
tests/: integration_test.rs
