[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reverse_proxy"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.8.0"
actix = "0.13.5"
actix-web-actors = "4.0.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
tokio-tungstenite = "0.23.1"
futures = "0.3"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"] }
env_logger = "0.11.5"
log = "0.4"
serde_json = "1.0"
num_cpus = "1.13"
chrono = "0.4"
redis = "0.26.1"

[workspace]

[dev-dependencies]
actix-rt = "2.8.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }